# cscratch

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  example.c  example_uthash.c  importer.cfg  todo.md
.claude/: settings.local.json
assets/fonts/: Roboto-Black.font
assets/meshes/buildings/: chestsmall.glb  conveyor.glb  extractor.glb  stone.glb
assets/meshes/cursors/: DefaultCursor.glb  PickaxeCursor.glb
assets/meshes/resources/: stoneore.glb
assets/meshes/tiles/: ore.glb
assets/ui/: common.styles  hud.styles  inventory.styles
libs/noz/: CMakeLists.txt
libs/noz/assets/shaders/: default.hlsl  gamma.hlsl  gizmo.hlsl  lit.hlsl  shadow.hlsl  text.hlsl  vfx.frag  vfx.vert  vignette.hlsl
libs/noz/include/noz/: allocator.h  application.h  array.h  asset.h  bounds3.h  color.h  file_watcher.h  gmath.h  hash.h  list.h  map.h  mesh_builder.h  noz.h  noz_math.h  object.h  platform.h  props.h  renderer.h  scene.h  stream.h  string.h  tokenizer.h  types.h  ui.h
libs/noz/shader_include/: mesh.hlsl
libs/noz/src/: application.c  application.cpp  array.c  asset.c  asset.cpp  bounds3.cpp  camera.c  camera.cpp  color.c  color.cpp  entity.c  entity.cpp  file_watcher.c  file_watcher.cpp  font.c  font.cpp  hash.c  hash.cpp  internal.h  list.c  list.cpp  map.c  map.cpp  material.c  material.cpp  mesh.c  mesh.cpp  mesh_builder.c  mesh_builder.cpp  object.c  object.cpp  object_pool.c  object_registry.c  object_type.c  pch.h  pipeline_factory.c  pipeline_factory.cpp  platform_posix.c  platform_posix.cpp  platform_win.c  (+22 more)
libs/noz/src/memory/: arena_allocator.c  arena_allocator.cpp  default_allocator.c  default_allocator.cpp  pool_allocator.c  pool_allocator.cpp
libs/noz/src/ui/: style.c  style.cpp  style_sheet.cpp  ui_internal.h
libs/noz/tools/common/: file_watcher.cpp  gltf.cpp  gltf.h  props.cpp  tokenizer.cpp  tokenizer.h
libs/noz/tools/common/ttf/: TrueTypeFontReader.cpp
libs/noz/tools/importer/: CMakeLists.txt
libs/noz/tools/importer/src/: asset_importer.h  asset_manifest.c  asset_manifest.cpp  asset_manifest.h  asset_manifest_main.c  gltf.cpp  gltf.h  importer_main.c  importer_main.cpp  importer_pch.h
libs/noz/tools/importer/src/importers/: font_importer.cpp  mesh_importer.cpp  shader_importer.c  shader_importer.cpp  style_sheet_importer.cpp  texture_importer.c  texture_importer.cpp
src/: assets.c  assets.cpp  assets.h  camera.c  entity.c  main.c  main.cpp  object.c  object.h  object_pool.c  object_registry.c  pch.h  renderer.c  renderer.h  scene.c  scene.h  string.c  string.h  texture.c
